# cudaDemo

./: CMakeLists.txt  CMakeLists.txt.local  ConstantMemoryTest.cu  DeviceTest.cu  DeviceTest.cuh  IntrinsicsTest.cu  Makefile  OccupancyTest.cu  SharedMemoryReduceTest.cu  ShuffleTest.cu  TextureSurfaceTest.cu  cmake_install.cmake  main.cu  matmul_kernel.cu
AccelerateLibraryTest/CURand/: RandKernel.cu  ReplaceRand.cu
AccelerateLibraryTest/CuBlas/: CuBlasTest.cu
AccelerateLibraryTest/CuFFT/: CuFFTTest.cu
AccelerateLibraryTest/CuSparse/: cuSparseTest.cu  cusparse
AccelerateLibraryTest/OpenACC/: openacc_cuda.cu  simple_kernel.c
InstructionTest/: IntrinsicsTest.cu
InstructionTest/ptx/: IntrinsicsTest.ptx
MatrixSimple/: SumMatrix.cu
MemoryTest/SharedMemory/: SharedMemoryStaticDynamicTest.cu  matmul_shared.cu  transposeMatrixWithSharedMemory.cu
OptimizeTest/: DynamicParallelTest.cu  UnrollTest.cu
PropertyTest/: DeviceTest.cu
StreamEventTest/: ConcurrentKernelInNotNullStream.cu  OverlapGPUCPU.cu  OverlapKernelAndDataProcessTest.cu  StreamDependencyTest.cu
ThreadTest/: ThreadFenceTest.cu  ThreadIdLocate.cu
high_performance_computing/centroid_2d/: Makefile  kernel.cu  kernel.cuh  main.cpp
high_performance_computing/dd_ld_share/: Makefile  kernel.cu  kernel.h  main.cpp
high_performance_computing/dist_2d/: dist_2d.cu
high_performance_computing/dist_3d/: Makefile  main.cu
high_performance_computing/dist_v1_cuda/: kernel.cu
high_performance_computing/distance_v2_cuda/: kernel.cu  kernel.h  kernel_unified.cu  main.cpp
high_performance_computing/flashlight/: interactions.h  kernel.cu  kernel.h  main.cpp
high_performance_computing/function_libs_test/cuBLAS_cuSolver/: Makefile  main.cpp
high_performance_computing/function_libs_test/cuRand/: pi_thust_curand.cu
high_performance_computing/function_libs_test/npp/sharpen/: CImg.h  Makefile  main.cpp
high_performance_computing/function_libs_test/thrust/dist_1d/: fused.cu  kernel.cu  lambda.cu
high_performance_computing/function_libs_test/thrust/norm/: kernel.cu
high_performance_computing/function_libs_test/thrust/pi/: lambda.cu  simple.cu
high_performance_computing/heat_2d/: interactions.h  kernel.cu  kernel.h  main.cpp
high_performance_computing/parallel_dot/: Makefile  kernel.cu  kernel.cuh  main.cpp
high_performance_computing/sharpen/: kernel.cu  kernel.h  main.cpp
high_performance_computing/stability/: Makefile  interactions.h  kernel.cu  kernel.h  main.cpp
high_performance_computing/vis_3d/: Makefile  device_funcs.cu  device_funcs.cuh  interactions.h  kernel.cu  kernel.h  main.cpp
